fix login update, update roll hero with equipment